# TTSonde

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/sx127x/: CMakeLists.txt  Kconfig.projbuild  sx127x.c
components/sx127x/include/: sx127x.h
flash_data/: config.html  config.json  index.html  map.html
main/: CMakeLists.txt  gps.c  http.c  idf_component.yml  main.c  screen.c  storage.c  utils.c  vbat.c  wifi.c
main/include/: gps.h  http.h  main.h  screen.h  sonde.h  storage.h  utils.h  vbat.h  wifi.h
main/include/sonde/: m20.h
main/include/ui/: ui.h
main/sonde/: m20.c
main/ui/: ui.c
